# cg2021

./: .gitignore
cg-bezier-subdivision/: README.md
cg-bezier-subdivision/doc/: BezierViewer_8cpp.html  BezierViewer_8cpp__incl.map  BezierViewer_8cpp__incl.md5  BezierViewer_8h.html  BezierViewer_8h__dep__incl.map  BezierViewer_8h__dep__incl.md5  BezierViewer_8h__incl.map  BezierViewer_8h__incl.md5  BezierViewer_8h_source.html  Main__Bezier_8cpp.html  Main__Bezier_8cpp__incl.map  Main__Bezier_8cpp__incl.md5  Main__Subdivision_8cpp.html  Mesh_8cpp.html  (+90 more)
cg-fourier/: CMakeLists.txt  README.md
cg-raytracer/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  raytracer
cg-raytracer/doc/: Mesh_8cpp.html  Mesh_8cpp__incl.map  Mesh_8cpp__incl.md5  Mesh_8h.html  Mesh_8h__dep__incl.map  Mesh_8h__dep__incl.md5  Mesh_8h__incl.map  Mesh_8h__incl.md5  Mesh_8h_source.html  Plane_8cpp.html  Plane_8cpp__incl.map  Plane_8cpp__incl.md5  Plane_8h.html  Plane_8h__dep__incl.map  Plane_8h__dep__incl.md5  Plane_8h__incl.map  Plane_8h__incl.md5  Plane_8h_source.html  README_8md.html  Raytracer_8cpp.html  Raytracer_8cpp__incl.map  Raytracer_8cpp__incl.md5  Raytracer_8h.html  Raytracer_8h__dep__incl.map  Raytracer_8h__dep__incl.md5  Raytracer_8h__incl.map  Raytracer_8h__incl.md5  Raytracer_8h_source.html  Sphere_8cpp.html  Sphere_8cpp__incl.map  Sphere_8cpp__incl.md5  Sphere_8h.html  Sphere_8h__dep__incl.map  Sphere_8h__dep__incl.md5  Sphere_8h__incl.map  Sphere_8h__incl.md5  Sphere_8h_source.html  annotated.html  classMesh-members.html  classMesh.html  (+45 more)
cg-raytracer/doc/search/: all_1.js  all_10.js  all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_2.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  searchdata.js  variables_0.js  variables_2.js  variables_3.js  (+11 more)
cg-raytracer/scenes/cube/: cube.sce
cg-raytracer/scenes/mask/: mask.sce
cg-raytracer/scenes/office/: office.sce
cg-raytracer/scenes/pokemon/: absol.mtl  ground.mtl  magnemite.mtl  pichu.mtl  pokemon.sce  sky.mtl  umbreon.mtl
cg-raytracer/scenes/rings/: rings.sce
cg-raytracer/scenes/toon_faces/: toon_faces.sce
cg-raytracer/src/: CMakeLists.txt  Makefile  Mesh.cpp  Mesh.h  Plane.cpp  Plane.h  Raytracer.cpp  Raytracer.h  Sphere.cpp  Sphere.h  cmake_install.cmake  main.cpp
cg-raytracer/src/utils/: Camera.h  Image.cpp  Image.h  Light.h  Material.h  Object.h  Ray.h  StopWatch.h  vec3.cpp  vec3.h
cg-solar-system/: README.md
(+348 files in other folders)
